[gd_scene load_steps=6 format=3 uid="uid://hpv02mcak0ft"]

[ext_resource type="Script" path="res://Scripts/1-SSB/shoot_area.gd" id="1_0fabo"]
[ext_resource type="Texture2D" uid="uid://bf0rs2pp5jasc" path="res://resources/01-SSB/graphics/Pixel Platformer/MyTiles/Layer 1_shots1.png" id="2_ldr1r"]
[ext_resource type="Texture2D" uid="uid://blqcq8jb3bsql" path="res://resources/01-SSB/graphics/Pixel Platformer/MyTiles/Layer 1_shots2.png" id="3_bkpdn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63bqc"]
size = Vector2(60, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_k1rqu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ldr1r")
}, {
"duration": 1.0,
"texture": ExtResource("2_ldr1r")
}, {
"duration": 1.0,
"texture": ExtResource("3_bkpdn")
}, {
"duration": 1.0,
"texture": ExtResource("3_bkpdn")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[node name="Area2D" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_0fabo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_63bqc")

[node name="shot" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_k1rqu")
frame = 3
frame_progress = 1.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="shot" to="." method="_on_animated_sprite_2d_animation_finished"]
